[gd_scene load_steps=7 format=2]

[ext_resource path="res://dudes/Wizard/Wizard.tscn" type="PackedScene" id=1]
[ext_resource path="res://dudes/FireWizard/FireWizard.gd" type="Script" id=2]
[ext_resource path="res://assets/units/FireWizard/Cast_0001.png" type="Texture" id=10]
[ext_resource path="res://assets/units/FireWizard/Cast_0002.png" type="Texture" id=11]
[ext_resource path="res://assets/units/FireWizard/Cast_0003.png" type="Texture" id=12]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="FireWizard" instance=ExtResource( 1 )]
script = ExtResource( 2 )
movement_speed = 30
regular_sprites = null
enemy_sprites = null

[node name="AnimatedSprite" parent="." index="0"]
frame = 2

[node name="Cast_sprite" parent="." index="3"]
frames = SubResource( 3 )
